--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -39,6 +39,12 @@
         height: 105px;
         background-color: gray;
     }
+    button{
+        margin-top: 20px;
+        margin-left: 230px;
+        width: 80px;
+        height: 25px;
+    }
   
 }
 
