--- a/src/components/ui/OptionSelector/OptionSelector.scss
+++ b/src/components/ui/OptionSelector/OptionSelector.scss
@@ -6,8 +6,12 @@
 
  .options{
   display: flex;
+  align-items: center;
   justify-content: center;
   margin: 5px 0;
+  li{
+    width: 100%;
+  }
   .active_type {
     color: red;
     background-color: rgba(255, 255, 255, .7);
