--- a/src/components/ui/Modal/Modal.scss
+++ b/src/components/ui/Modal/Modal.scss
@@ -1,6 +1,64 @@
+@keyframes openModalContent {
+    0% {
+        max-width: 0px;
+    }
+
+
+    100%{
+        max-width:100%;
+    }
+}
+
+@keyframes openModal {
+    0%{
+        background-color: rgba(0, 0, 0, 0);
+    }
+
+    100%{
+        background-color: rgba(0, 0, 0, 0.35);
+    }
+}
+
+@keyframes closeModalContent {
+    0%{
+        max-width:100%;
+    }
+
+    100% {
+        max-width: 0%;
+        padding: 0;
+        margin: 0;
+    }
+}
+
+@keyframes closeModal {
+    0%{
+        background-color: rgba(0, 0, 0, 0.35);
+    }
+    100%{
+        background-color: rgba(0, 0, 0, 0);
+    }
+}
+
+
+.closed_modal_background{
+    animation: closeModal 1s forwards ;
+}
+
+.closed_modal_content{
+    animation: closeModalContent 1s ;
+}
+
+.opened_modal_background{
+    animation: openModal 1s;
+}
+
+.opened_modal_content{
+    animation: openModalContent 1s;
+}
+
 .modal_background{
     background-color: rgba(0, 0, 0, 0.35);
-    
     left: 0px;
     right: 0px;
     position: fixed;
@@ -12,8 +70,11 @@
     align-items: center;
     justify-content: center;
     .modal_content {
+        overflow: hidden;
         background-color: white;
         border-radius: 5px;
         padding: 20px;
     }
 }
+
+
