--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -2,7 +2,7 @@
    
     margin: 20px 20px;
     width: 360px;
-    height: 460px;
+    height: 490px;
     max-width: 360px;
     padding-top: 10px;
     display: flex;
@@ -41,12 +41,13 @@
         height: 105px;
         background-color: gray;
     }
-    button{
+
+    .cart_button {
+        padding: 10px 20px;
+        margin-left: 200px;
         margin-top: 20px;
-        margin-left: 230px;
-        width: 80px;
-        height: 25px;
     }
+    
   
 }
 
