--- a/src/components/Catalog/Catalog.scss
+++ b/src/components/Catalog/Catalog.scss
@@ -1,14 +1,14 @@
+
 .container{
     max-width: 1200px;
     background-color: white;
     height: 100%;
     margin: 0 auto;
-    
+    border-radius: 5px;
     
     .container__pizzas{
         display: flex;
         flex-wrap: wrap;
-        
     }
 }
 
