--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -4,12 +4,16 @@
     justify-content: center;
     background-color: white;
 
+    .navLink{
+        position: absolute;
+        right: 20px;
+    }
     .PizzaTypes{
 
         list-style: none;
         display: flex;
         align-items: center;
-
+       
         li{
             transition: .3s;
             margin: 0 10px;
@@ -17,7 +21,7 @@
 
         li:hover{ 
             cursor: pointer;
-            color: aqua;
+            color: red;
             transition: .3s
         };
     }
@@ -25,7 +29,7 @@
     .dropDown{
         position: relative;
         display: inline-block;
-
+        
         .sortType {
             text-decoration:underline;
             color: red;
@@ -33,12 +37,13 @@
         }
 
         span{
-            margin-left: 5px;
+            margin-left: 10px;
             position: absolute;
         }
         .sortTypes{
             display: block;
             position: absolute;
+            margin-left: 80px;
             background-color: #f9f9f9;
             min-width: 160px;
             box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
